--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:id="@+id/signup_fragment_container"
     android:orientation="vertical"
-    tools:context=".SignUpActivity">
+    tools:context=".SignUp.SignUpActivity">
 
 
 
