--- a/app/src/main/res/layout/fragment_otp_verification.xml
+++ b/app/src/main/res/layout/fragment_otp_verification.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".Fragment.OtpVerificationFragment">
+    tools:context=".SignUp.OtpVerificationFragment">
 
     <com.mukesh.OtpView
         android:id="@+id/otp_view"
