--- a/app/src/main/res/layout/msg_reciver_layout.xml
+++ b/app/src/main/res/layout/msg_reciver_layout.xml
@@ -1,17 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:paddingTop="8dp"
-    android:paddingBottom="16dp"
-    android:paddingLeft="8dp"
-    android:paddingRight="16dp"
-    android:layout_gravity="start"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:background="@android:color/holo_purple">
+    android:paddingTop="2dp"
+    android:paddingBottom="2dp"
+    android:paddingLeft="2dp"
+    android:paddingRight="8dp"
+    android:layout_margin="4dp"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <TextView
+        android:maxWidth="320dp"
+        android:padding="8dp"
+        android:background="@android:color/holo_purple"
         android:id="@+id/msg"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
