--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="colorAccent">#D81B60</color>
 
     <color name="nav_background">#fe485a</color>
+    <color name="background_grey">#f5f5f5</color>
 </resources>
