--- a/app/src/main/res/layout/fragment_chat_threads.xml
+++ b/app/src/main/res/layout/fragment_chat_threads.xml
@@ -4,11 +4,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ChatThreads">
+    tools:context=".MessageThreads.ChatThreads">
 
     <!-- TODO: Update blank fragment layout -->
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolBar"
+        android:elevation="8dp"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
         android:background="@color/colorPrimary"
