--- a/app/src/main/res/layout/fragment_chat_threads.xml
+++ b/app/src/main/res/layout/fragment_chat_threads.xml
@@ -18,12 +18,28 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <android.support.v7.widget.RecyclerView
+        tools:visibility="gone"
         tools:itemCount="5"
         tools:listitem="@layout/threads_item_layout"
         android:id="@+id/recycleView"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:background="@color/background_grey"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/toolBar" />
+
+    <ProgressBar
+        android:id="@+id/recyclerviewProgressbar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginBottom="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
