--- a/app/src/main/res/layout/settings_fragment.xml
+++ b/app/src/main/res/layout/settings_fragment.xml
@@ -61,9 +61,11 @@
             tools:text="summary" />
 
         <SeekBar
+            android:thumb="@drawable/seek_thumb"
+            android:progressDrawable="@drawable/seek_bar"
             android:id="@+id/seekBar"
             android:layout_width="0dp"
-            android:layout_height="16dp"
+            android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
             android:layout_marginEnd="8dp"
             android:layout_marginRight="8dp"
