--- a/app/src/main/res/layout/fragment_map.xml
+++ b/app/src/main/res/layout/fragment_map.xml
@@ -11,8 +11,42 @@
         android:id="@+id/mapView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        mapbox:mapbox_styleUrl="mapbox://styles/rdas6313/cjq0s5xll31um2robtkse4kit"
-        />
+        mapbox:layout_constraintBottom_toBottomOf="parent"
+        mapbox:layout_constraintEnd_toEndOf="parent"
+        mapbox:layout_constraintStart_toStartOf="parent"
+        mapbox:layout_constraintTop_toTopOf="parent"
+        mapbox:mapbox_styleUrl="mapbox://styles/rdas6313/cjq0s5xll31um2robtkse4kit" />
+
+    <ImageView
+        android:id="@+id/recent_chat"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
+        android:layout_marginTop="32dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginRight="16dp"
+        android:background="@drawable/map_btn_background"
+        android:contentDescription="Todo"
+        android:elevation="4dp"
+        android:padding="12dp"
+        android:src="@drawable/icon_frnds"
+        mapbox:layout_constraintEnd_toEndOf="parent"
+        mapbox:layout_constraintTop_toBottomOf="@+id/settings" />
+
+    <ImageView
+        android:id="@+id/settings"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
+        android:layout_marginTop="32dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginRight="16dp"
+        android:background="@drawable/map_btn_background"
+        android:contentDescription="Todo"
+        android:elevation="4dp"
+        android:padding="12dp"
+        android:src="@drawable/ic_settings_black_24dp"
+        mapbox:layout_constraintEnd_toEndOf="parent"
+        mapbox:layout_constraintTop_toTopOf="parent" />
+
 
     <!-- mapbox://styles/mapbox/streets-v11 for street -->
 
