--- a/app/src/main/res/layout/threads_item_layout.xml
+++ b/app/src/main/res/layout/threads_item_layout.xml
@@ -6,7 +6,7 @@
     android:paddingBottom="16dp"
     android:layout_marginTop="2dp"
     android:layout_marginBottom="2dp"
-    android:background="@android:color/white"
+    android:background="@drawable/chat_threads_background"
     xmlns:tools="http://schemas.android.com/tools">
 
     <ImageView
@@ -18,7 +18,8 @@
         android:layout_marginTop="16dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:src="@drawable/circle_background" />
+        android:src="@drawable/circle_background"
+        android:contentDescription="TODO" />
 
     <TextView
         android:id="@+id/ImageText"
@@ -53,6 +54,7 @@
         android:layout_marginRight="24dp"
         android:ellipsize="end"
         android:maxLines="1"
+        android:textColor="@color/lastMsgColor"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
         app:layout_constraintBottom_toBottomOf="@+id/Img"
         app:layout_constraintEnd_toStartOf="@+id/thread_date"
@@ -67,12 +69,14 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="16dp"
         android:layout_marginRight="16dp"
+        android:textColor="@color/TIME_COLOR"
         android:textAppearance="@style/TextAppearance.AppCompat.Small"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@+id/Img"
         tools:text="2:45 pm" />
 
     <TextView
+        android:textColor="@color/TIME_COLOR"
         android:id="@+id/thread_date"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
