--- a/app/src/main/res/layout/msg_reciver_layout.xml
+++ b/app/src/main/res/layout/msg_reciver_layout.xml
@@ -8,19 +8,21 @@
     android:paddingLeft="2dp"
     android:paddingRight="8dp"
     android:layout_margin="4dp"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:paddingStart="2dp"
+    android:paddingEnd="8dp">
 
     <TextView
         android:maxWidth="320dp"
-        android:padding="8dp"
-        android:background="@android:color/holo_purple"
+        android:padding="12dp"
+        android:background="@drawable/msg_receive_background"
         android:id="@+id/msg"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginTop="8dp"
-        android:textColor="@android:color/black"
+        android:textColor="@android:color/white"
         android:textSize="16sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -30,8 +32,10 @@
         android:id="@+id/timeAndDate"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
         android:layout_marginTop="4dp"
-        android:textColor="@android:color/background_dark"
+        android:textColor="@color/TIME_COLOR"
         android:textSize="14sp"
         app:layout_constraintStart_toStartOf="@+id/msg"
         app:layout_constraintTop_toBottomOf="@+id/msg"
