--- a/app/src/main/res/layout/msg_sender_layout.xml
+++ b/app/src/main/res/layout/msg_sender_layout.xml
@@ -8,14 +8,16 @@
     android:paddingLeft="8dp"
     android:paddingRight="2dp"
     android:layout_margin="4dp"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:paddingStart="8dp"
+    android:paddingEnd="2dp">
 
     <TextView
         android:maxWidth="320dp"
-        android:padding="8dp"
-        android:background="@android:color/holo_orange_light"
+        android:padding="12dp"
+        android:background="@drawable/msg_send_background"
         android:textSize="16sp"
-        android:textColor="@android:color/black"
+        android:textColor="@android:color/white"
         android:id="@+id/msg"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -31,7 +33,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="4dp"
-        android:textColor="@android:color/background_dark"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
+        android:textColor="@color/TIME_COLOR"
         android:textSize="14sp"
         app:layout_constraintEnd_toEndOf="@+id/msg"
         app:layout_constraintTop_toBottomOf="@+id/msg"
