--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -16,4 +16,7 @@
     <color name="seek_bar_secondary_progress">#3399CC</color>
     <color name="lastMsgColor">#90A4AE</color>
     <color name="TIME_COLOR">#B0BEC5</color>
+    <color name="msg_receive_background_color">#2979FF</color>
+    <color name="msg_send_color">#00BFA5</color>
+    <color name="chat_btn_color">#FF6D00</color>
 </resources>
