--- a/app/src/main/res/layout/threads_item_layout.xml
+++ b/app/src/main/res/layout/threads_item_layout.xml
@@ -5,9 +5,11 @@
     android:layout_height="wrap_content"
     android:paddingBottom="16dp"
     android:layout_marginTop="2dp"
+    android:elevation="1dp"
     android:layout_marginBottom="2dp"
     android:background="@drawable/chat_threads_background"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:targetApi="lollipop">
 
     <ImageView
         android:id="@+id/Img"
