--- a/app/src/main/res/layout/info_window_layout.xml
+++ b/app/src/main/res/layout/info_window_layout.xml
@@ -8,10 +8,11 @@
     android:paddingBottom="16dp"
     android:paddingTop="8dp"
     android:background="@android:color/white"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:paddingStart="8dp">
 
     <TextView
-        android:textSize="18sp"
+        android:textAppearance="@style/TextAppearance.AppCompat.Large"
         android:textStyle="normal"
         android:textColor="@android:color/black"
         android:id="@+id/infoWindowtitle"
@@ -25,6 +26,7 @@
         tools:text="Raja" />
 
     <TextView
+        android:textColor="@color/TIME_COLOR"
         android:maxLines="2"
         android:ellipsize="end"
         android:maxWidth="150dp"
@@ -44,13 +46,14 @@
         android:layout_marginStart="16dp"
         android:layout_marginLeft="16dp"
         android:layout_marginBottom="8dp"
-        android:background="@color/colorPrimaryDark"
+        android:background="@drawable/msg_btn_background"
         android:elevation="4dp"
         android:text="@string/marker_chat_btn_text"
-        android:textSize="16dp"
         android:textColor="@android:color/white"
+        android:textSize="16dp"
         app:layout_constraintBottom_toBottomOf="@+id/infoWindowSnippet"
         app:layout_constraintStart_toEndOf="@+id/infoWindowSnippet"
-        app:layout_constraintTop_toTopOf="@+id/infoWindowtitle"/>
+        app:layout_constraintTop_toTopOf="@+id/infoWindowtitle"
+        tools:targetApi="lollipop" />
 
 </android.support.constraint.ConstraintLayout>
