changed design of Settings

--- a/app/src/main/res/layout/settings_fragment.xml
+++ b/app/src/main/res/layout/settings_fragment.xml
@@ -22,16 +22,13 @@
         android:id="@+id/container_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp"
         android:background="@android:color/white"
+        android:elevation="4dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/toolBar">
+        app:layout_constraintTop_toBottomOf="@+id/toolBar"
+        tools:targetApi="lollipop">
 
         <TextView
             android:id="@+id/titleBar"
@@ -61,8 +58,6 @@
             tools:text="summary" />
 
         <SeekBar
-            android:thumb="@drawable/seek_thumb"
-            android:progressDrawable="@drawable/seek_bar"
             android:id="@+id/seekBar"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
@@ -72,6 +67,8 @@
             android:max="1000"
             android:min="1"
             android:progress="500"
+            android:progressDrawable="@drawable/seek_bar"
+            android:thumb="@drawable/seek_thumb"
             app:layout_constraintEnd_toEndOf="@+id/titleBar"
             app:layout_constraintStart_toStartOf="@+id/summary"
             app:layout_constraintTop_toBottomOf="@+id/summary"
