--- a/app/src/main/res/layout/info_window_layout.xml
+++ b/app/src/main/res/layout/info_window_layout.xml
@@ -7,7 +7,7 @@
     android:paddingRight="16dp"
     android:paddingBottom="16dp"
     android:paddingTop="8dp"
-    android:background="@android:color/white"
+    android:background="@drawable/info_window_background"
     xmlns:tools="http://schemas.android.com/tools"
     android:paddingStart="8dp">
 
