--- a/app/src/main/res/layout/fragment_chat_threads.xml
+++ b/app/src/main/res/layout/fragment_chat_threads.xml
@@ -15,7 +15,7 @@
         android:background="@color/colorPrimary"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent" tools:targetApi="lollipop"/>
 
     <android.support.v7.widget.RecyclerView
         tools:visibility="gone"
@@ -31,6 +31,7 @@
         app:layout_constraintTop_toBottomOf="@+id/toolBar" />
 
     <ProgressBar
+        tools:visibility="gone"
         android:id="@+id/recyclerviewProgressbar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -44,4 +45,22 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/toolBar" />
+
+    <TextView
+        android:id="@+id/errorView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginBottom="8dp"
+        android:textColor="@color/TIME_COLOR"
+        android:textSize="24sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/toolBar"
+        tools:text="No Data Found" />
 </android.support.constraint.ConstraintLayout>
